[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/double(2)/Double.gd" type="Script" id=1]
[ext_resource path="res://Enemies/double(2)/double.png" type="Texture" id=2]
[ext_resource path="res://Classes/Samples/proBack.png" type="Texture" id=3]
[ext_resource path="res://Classes/Samples/proFront.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7198, 13.9267 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.2718, 2.91171 )

[node name="Double" type="StaticBody2D" groups=[
"body",
"enemy",
]]
scale = Vector2( 2, 2 )
collision_layer = 196608
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 2 )

[node name="shoot" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="state" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -26.0
margin_top = -32.0
margin_right = 26.0
margin_bottom = -20.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="cL" type="Position2D" parent="."]
position = Vector2( 25, 0 )

[node name="cR" type="Position2D" parent="."]
position = Vector2( -25, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.18121 )
shape = SubResource( 1 )

[node name="Shield" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
position = Vector2( -0.00292969, 13.4832 )
shape = SubResource( 2 )

[connection signal="timeout" from="shoot" to="." method="_on_shoot_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="state" to="." method="_on_state_timeout"]
[connection signal="body_entered" from="Shield" to="." method="_on_Shield_body_entered"]
